...
        "Warten bis Gast-Spieler sich verbindet"
    } else {
        "Verbindung zum Host-Spieler wird hergestellt"
    }

    val connectedText = if (connectionMode == "host") {
        "Gast-Spieler verbunden"
    } else {
        "Mit Host-Spieler verbunden"
    }

    var isConnected by remember { mutableStateOf(gameServices.isBlueConnected()) }

...
                Button(
                    onClick = {
                        gameServices.startGame()
                        onStartClick()
                    }
                ) {
                    Text("Start")
                }
            }
        }
    }
}
