...
                horizontalAlignment = Alignment.CenterHorizontally
            ) {
                val text1 = "Willkommen bei Vier Gewinnt!"

                val text2 = "Um das Spiel zu spielen, wird auf beiden Endgeräten eine Bluetooth-Verbindung vorausgesetzt. Ein Spieler erstellt als Host das Spiel, der andere Spieler tritt als Gast bei."

                val text3 = "Mit 'Verbindung starten' hosten Sie ein Spiel, mit 'verbinden' treten Sie einem Spiel bei."

                Text(
                    text = text1,
                    style = MaterialTheme.typography.bodyMedium,
                    color = Color(0xFF5F537F)
                )
...
                    Text(text = "Verbindung starten")
                }

                Spacer(modifier = Modifier.height(16.dp))

                Button(onClick = { onConnect() }) {
                    Text(text = "Verbinden")
                }
            }
        }
    }
}

...
